implemented delta_time conversion to numpy datetime

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -52,6 +52,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e782b5c9-b9fa-4bf8-8057-b3a785b2f550",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from h5coro.datasets import icesat2\n",
+    "col_convs = {\"delta_time\": icesat2.to_datetime}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bef47b14-e1c4-49b4-ae09-d43a043fdd11",
    "metadata": {
@@ -66,6 +77,7 @@
    "execution_count": null,
    "id": "5008897b-6b6f-4889-89c7-f7d66d643308",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -74,7 +86,7 @@
     "                'ATL03_20191130112041_09860505_006_01.h5'\n",
     "auth = earthaccess.login()\n",
     "\n",
-    "ds = xr.open_dataset(s3url_atl03, engine='h5coro', group='/gt1l/heights', creds=auth)\n",
+    "ds = xr.open_dataset(s3url_atl03, engine='h5coro', group='/gt1l/heights', col_convs=col_convs, creds=auth)\n",
     "ds"
    ]
   },
@@ -186,9 +198,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "h5coro-dev",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "h5coro-dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -200,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
