made some parameter names more consistent

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -85,8 +85,8 @@
     "s3url_atl03 = 'nsidc-cumulus-prod-protected/ATLAS/ATL03/006/2019/11/30/' \\\n",
     "                'ATL03_20191130112041_09860505_006_01.h5'\n",
     "auth = earthaccess.login()\n",
-    "\n",
-    "ds = xr.open_dataset(s3url_atl03, engine='h5coro', group='/gt1l/heights', col_convs=col_convs, creds=auth)\n",
+    "creds = auth.get_s3_credentials(daac='NSIDC')\n",
+    "ds = xr.open_dataset(s3url_atl03, engine='h5coro', group='/gt1l/heights', col_convs=col_convs, credentials=creds)\n",
     "ds"
    ]
   },
