disable multiprocessing for xarray by default

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "from h5coro.datasets import icesat2\n",
-    "col_convs = {\"delta_time\": icesat2.to_datetime}"
+    "col_convs = {} # {\"delta_time\": icesat2.to_datetime}"
    ]
   },
   {
@@ -117,7 +117,7 @@
    },
    "outputs": [],
    "source": [
-    "local_path = '/home/jovyan/data/ATL03/processed_ATL03_20191130220138_09930502_006_01.h5'\n",
+    "local_path = 'file:///home/jovyan/data/ATL03/processed_ATL03_20191130220138_09930502_006_01.h5'\n",
     "ds = xr.open_dataset(local_path, engine='h5coro', group='/gt1l/heights')\n",
     "ds"
    ]
