updated examples notebook

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -49,7 +49,8 @@
    "outputs": [],
    "source": [
     "import xarray as xr\n",
-    "import earthaccess"
+    "import earthaccess\n",
+    "import os"
    ]
   },
   {
@@ -60,7 +61,26 @@
    "outputs": [],
    "source": [
     "from h5coro.datasets import icesat2\n",
-    "col_convs = {} # {\"delta_time\": icesat2.to_datetime}"
+    "col_convs = {} # {\"delta_time\": icesat2.to_datetime}\n",
+    "col_coords = {\n",
+    "    # Coordinate variables\n",
+    "    \"delta_time\": (\"photon\",),\n",
+    "    \"lat_ph\":     (\"photon\",),\n",
+    "    \"lon_ph\":     (\"photon\",),\n",
+    "\n",
+    "    # Photon-level variables (1D)\n",
+    "    \"dist_ph_across\": (\"photon\",),\n",
+    "    \"dist_ph_along\":  (\"photon\",),\n",
+    "    \"h_ph\":           (\"photon\",),\n",
+    "    \"pce_mframe_cnt\": (\"photon\",),\n",
+    "    \"ph_id_channel\":  (\"photon\",),\n",
+    "    \"ph_id_count\":    (\"photon\",),\n",
+    "    \"ph_id_pulse\":    (\"photon\",),\n",
+    "    \"quality_ph\":     (\"photon\",),\n",
+    "\n",
+    "    # 2D variable\n",
+    "    \"signal_conf_ph\": (\"photon\", \"surface_type\"),\n",
+    "}\n"
    ]
   },
   {
@@ -70,7 +90,7 @@
     "user_expressions": []
    },
    "source": [
-    "Accessing a cloud file"
+    "Accessing a cloud file, reading all elements in each dataset"
    ]
   },
   {
@@ -87,16 +107,38 @@
     "s3url_atl03 = 'nsidc-cumulus-prod-protected/ATLAS/ATL03/006/2019/11/30/ATL03_20191130112041_09860505_006_01.h5'\n",
     "auth = earthaccess.login()\n",
     "creds = auth.get_s3_credentials(daac='NSIDC')\n",
-    "ds = xr.open_dataset(s3url_atl03, engine='h5coro', group='/gt1l/heights', col_convs=col_convs, credentials=creds)\n",
+    "ds = xr.open_dataset(s3url_atl03, engine='h5coro', group='/gt1l/heights', col_convs=col_convs, col_coords=col_coords, credentials=creds)\n",
     "ds"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "7",
-   "metadata": {
-    "user_expressions": []
-   },
+   "metadata": {},
+   "source": [
+    "Accessing a cloud file, only first 1000 elements in each datatest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "s3url_atl03 = 'nsidc-cumulus-prod-protected/ATLAS/ATL03/006/2019/11/30/ATL03_20191130112041_09860505_006_01.h5'\n",
+    "auth = earthaccess.login()\n",
+    "creds = auth.get_s3_credentials(daac='NSIDC')\n",
+    "ds = xr.open_dataset(s3url_atl03, engine='h5coro', group='/gt1l/heights', col_convs=col_convs, col_coords=col_coords, hyperslices=[[110, 1110]], credentials=creds)\n",
+    "ds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9",
+   "metadata": {},
    "source": [
     "Accessing a local file"
    ]
@@ -104,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "10",
    "metadata": {
     "tags": []
    },
@@ -115,62 +157,13 @@
     "ds = None\n",
     "if os.path.exists(local_path):\n",
     "    local_path = 'file://' + local_path\n",
-    "    ds = xr.open_dataset(local_path, engine='h5coro', group='/gt1l/heights')\n",
+    "    ds = xr.open_dataset(local_path, engine='h5coro', group='/gt1l/heights', col_convs=col_convs, col_coords=col_coords)\n",
     "ds"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9",
-   "metadata": {
-    "user_expressions": []
-   },
-   "source": [
-    "## What xarray typically returns\n",
-    "\n",
-    "**run in an environment without h5coro installed**\n",
-    "\n",
-    "Accessing cloud ATL03 data without using h5coro."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import xarray as xr\n",
-    "import earthaccess"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "auth = earthaccess.login()\n",
-    "s3 = earthaccess.get_s3_filesystem(daac=\"NSIDC\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "s3url_atl03 = 'nsidc-cumulus-prod-protected/ATLAS/ATL03/006/2019/11/30/ATL03_20191130112041_09860505_006_01.h5'\n",
-    "ds = xr.open_dataset(s3.open(s3url_atl03, 'rb'), group='/gt1l/heights')\n",
-    "ds"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "13",
    "metadata": {
     "user_expressions": []
    },
@@ -181,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "12",
    "metadata": {
     "tags": []
    },
@@ -193,20 +186,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "13",
    "metadata": {
     "user_expressions": []
    },
    "source": [
     "### ATL23 \n",
     "\n",
-    "(~90 second access time)"
+    "(~10 second access time)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "15",
    "metadata": {
     "tags": []
    },
@@ -233,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "16",
    "metadata": {
     "tags": []
    },
@@ -246,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "17",
    "metadata": {
     "tags": []
    },
@@ -258,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "18",
    "metadata": {
     "user_expressions": []
    },
@@ -271,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "19",
    "metadata": {
     "tags": []
    },
@@ -289,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "20",
    "metadata": {
     "tags": []
    },
@@ -302,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "21",
    "metadata": {
     "tags": []
    },
@@ -315,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "h5coro-h5py-env",
+   "display_name": "h5coro-env",
    "language": "python",
    "name": "python3"
   },
